<resources>
    <!--General-->
    <string name="app_toolbar_title">HelpNet Tech</string>
    <string name="app_name">Técnico</string>
    <string name="loading_label">Carregando…</string>
    <string name="no_service_available">Nenhuma OS disponível</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="ok">OK</string>

    <!--Main Tabs-->
    <string name="title_home">OS Abertas</string>
    <string name="title_dashboard">Em andamento</string>
    <string name="title_profile">Perfil</string>

    <!--Login-->
    <string name="email_hint">Endereço de Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">Logar</string>
    <string name="email_required">Email obrigatório</string>
    <string name="password_required">Senha obrigatória</string>
    <string name="invalid_login">Usuário ou Senha inválidos</string>
    <string name="fail_obtain_user_info">Falha ao tentar obter os dados do usuário. Por favor, tente novamente.</string>

    <!--Service Order Detail-->
    <string name="os_detail_screen_title">Detalhes da OS</string>
    <string name="customer_data_label">Dados do cliente</string>
    <string name="service_order_label">Ordem de Serviço</string>
    <string name="tech_responsible_label">Técnico</string>
    <string name="address_label">Endereço</string>
    <string name="start_working_cta">Iniciar Atendimento</string>
    <string name="finish_working_cta">Finalizar Atendimento</string>
    <string name="problem_resolution_hint">Resolução do problema</string>
    <string name="send_customer_message_hint">Mensagem para o cliente</string>

    <!--OSData-->
    <string name="osNumber"><![CDATA[<b>Número OS:</b> %s]]></string>
    <string name="problemData"><![CDATA[<b>Problema:</b> %s]]></string>
    <string name="osDetailData"><![CDATA[<b>Detalhe da OS:</b> %s]]></string>
    <string name="techDetailData"><![CDATA[<b>Técnico:</b> %s]]></string>

    <!--CustomerData-->
    <string name="customerID"><![CDATA[<b>CPF do cliente:</b> %s]]></string>
    <string name="customerName"><![CDATA[<b>Nome do cliente:</b> %s]]></string>
    <string name="referenceDescription"><![CDATA[<b>Referência:</b> %s]]></string>
    <string name="phoneCustomer"><![CDATA[<b>Telefone:</b> %s]]></string>
    <string name="cellphoneCustomer"><![CDATA[<b>Celular:</b> %s]]></string>
    <string name="plainDetail"><![CDATA[<b>Plano:</b> %s]]></string>
    <string name="addressCustomer"><![CDATA[<b>Endereço:</b> %s]]></string>
    <string name="addressNumber"><![CDATA[<b>Número:</b> %s]]></string>
    <string name="addressNeighbor"><![CDATA[<b>Bairro:</b> %s]]></string>
    <string name="addressCity"><![CDATA[<b>Cidade:</b> %s]]></string>
    <string name="login">LOGIN</string>
    <string name="do_login">Logar</string>
    <string name="forgot_password">Esqueceu a senha?</string>

    <!--Profile-->
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="edit">Editar</string>
    <string name="logout">Sair</string>
    <string name="logout_message">Tem certeza que deseja sair?</string>
    <string name="profile_information">Informações</string>
    <string name="providerName"><![CDATA[<b>Provedor:</b> %s]]></string>
    <string name="customerCode"><![CDATA[<b>Código de acesso do cliente:</b> %s]]></string>
    <string name="phoneProvider"><![CDATA[<b>Telefone:</b> %s]]></string>
    <string name="cellphoneProvider"><![CDATA[<b>Celular:</b> %s]]></string>
    <string name="userNameProfile"><![CDATA[<b>Técnico:</b> %s]]></string>

    <!--List-->
    <string name="fail_obtain_os_list">Erro ao tentar obter a lista dos serviços. Por favor, tente novamente.</string>
    <string name="attention_title">Atenção</string>
    <string name="fail_obtain_os_detail">Não foi possível obter os detalhes da OS. Verifique sua rede e tente
        novamente.
    </string>

    <string name="no_connection_title">Sem conexão</string>
    <string name="no_connection_message">No momento você está sem conexão de Internet. Por favor, verifique a sua rede e
        tente novamente.
    </string>
    <string name="close_button">Fechar</string>


</resources>
