<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@color/white">

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo_default"/>

    <TextView
            android:id="@+id/second_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/no_connection_title"
            android:textColor="@color/text_333333"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/third_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/no_connection_message"
            android:textColor="@color/text_333333"
            android:textSize="16sp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/PrimaryRoundedAppButton"
            app:cornerRadius="20dp"
            android:layout_below="@+id/third_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/close_button"/>

</RelativeLayout>