<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@color/login_bg">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_default"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            android:textColorHint="@color/separator_color">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/text_333333"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilUserEmail"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            android:textColorHint="@color/separator_color">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_333333"
                android:imeOptions="actionDone"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/PrimaryRoundedAppButton"
            android:layout_below="@+id/tilUserPassword"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/login_button"/>

</RelativeLayout>